--- a/index.html
+++ b/index.html
@@ -26,11 +26,20 @@
     <img src ="images/MusicNote.svg" id="music-key"/>
   </header>
 
+  <!-- // Search for Videos// -->
+
   <form action="input" id="enterInfo">
     <label for="songSearch"></label>
       <input type="text" name="search1" placeholder="Enter Song Here" id="searchInput"></input>
     <button type="submit" value= "search" name="searchButton" id="searchBtn">Search</button>
   </form>
+
+
+  <!-- Show video  -->
+
+  <div class="videoArea">
+    <li></li>
+  </div>
 
   <!-- <h1><span id= "title">The Voice</span></h1> -->
 
@@ -194,7 +203,10 @@
     <p class="count">08</p>
   </div>
   </section>
-  <script type="text/javascript" src="app.js"></script>
+<script type="jquerylib/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+ <script type="text/javascript" src="app2.js"></script>
+ <script src="https://apis.google.com/js/client.js?onload=init"></script>
+  </script>
 
 </body>
 </html>
